# GoatAI

./: .vercelignore  README.md  app.py  index.html  pyproject.toml  render.yaml  script.js  style.css  vercel.json
api/: index.py
